k8s/service.yaml
apiVersion: v1
kind: Service
metadata: { name: teamdocs-svc }
spec:
  selector: { app: teamdocs }
  ports:
    - port: 80
      targetPort: 80
