k8s/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamdocs-public
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: public.docs.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teamdocs-svc
                port: { number: 80 }
